tests/baselines/reference/unreachableYieldExpressionsVsInferredYieldTypes(allowunreachablecode=false).errors.txt
unreachableYieldExpressionsVsInferredYieldTypes.ts(6,3): error TS7027: Unreachable code detected.
unreachableYieldExpressionsVsInferredYieldTypes.ts(11,3): error TS7027: Unreachable code detected.
unreachableYieldExpressionsVsInferredYieldTypes.ts(19,3): error TS7027: Unreachable code detected.
unreachableYieldExpressionsVsInferredYieldTypes.ts(30,3): error TS7027: Unreachable code detected.
unreachableYieldExpressionsVsInferredYieldTypes.ts(40,3): error TS7027: Unreachable code detected.
unreachableYieldExpressionsVsInferredYieldTypes.ts(44,7): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
unreachableYieldExpressionsVsInferredYieldTypes.ts(48,5): error TS7027: Unreachable code detected.
unreachableYieldExpressionsVsInferredYieldTypes.ts(48,11): error TS7005: Variable 'x' implicitly has an 'any' type.


==== unreachableYieldExpressionsVsInferredYieldTypes.ts (8 errors) ====
    export function* g() {
      let x;
      x = 1;
      yield x;
      return 'foo';
      yield x;
      ~~~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    export function* h() {
      return 'foo';
      let y;
      ~~~~~~
      y = 1;
    ~~~~~~~~
      yield y;
    ~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    export function* i() {
      yield true;
      return 'foo';
      let y;
      ~~~~~~
      y = 1;
    ~~~~~~~~
      yield y;
    ~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    export function* j() {
      let x: string | number | boolean;
      x = 1;
      yield x;
      return true;
    
      x = "foo";
      ~~~~~~~~~~
      yield x;
    ~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    function throws(): never {
      throw new Error();
    }
    
    export function* foo() {
      throws();
      yield 42;
      ~~~~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    export function* bar() {
      var x;
          ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
      x = 1;
      if (Math.random()) {
        throws();
        yield x;
        ~~~~~~~~
!!! error TS7027: Unreachable code detected.
              ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
      }
      x = 2;
      yield x;
    }